--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 <body>
     <main>
         <h1>Lista de Tarefas</h1>
+        <section id="create-todo-section">
+            <form id="create-todo-form">
+                <input 
+                type="text"
+                name="description" 
+                id="description"
+                class="input-description"
+                aria-label="Qual a tarefa deseja cadastrar?"
+                placeholder="Qual a tarefa deseja cadastrar?">
+
+                <button type="submit" aria-label="Cadastrar tarefa" class="add-task-btn">+</button>
+            </form>            
+        </section>
         <section class="todo-list-section">
             <ul id="todo-list"></ul>
         </section>
