--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="./script.js"></script>
-    <title>Lista de Tarefas - Projeto final Java Script</title>
+    <script src="./script.js" defer></script>
+    <title>Lista de Tarefas - Projeto final JavaScript</title>
 </head>
 <body>
     <main>
@@ -13,19 +13,24 @@
         <section id="create-todo-section">
             <form id="create-todo-form">
                 <input 
-                type="text"
-                name="description" 
-                id="description"
-                class="input-description"
-                aria-label="Qual a tarefa deseja cadastrar?"
-                placeholder="Qual a tarefa deseja cadastrar?">
-
-                <button type="submit" aria-label="Cadastrar tarefa" class="add-task-btn">+</button>
+                    type="text"
+                    name="description" 
+                    id="description"
+                    class="input-description"
+                    aria-label="Qual a tarefa deseja cadastrar?"
+                    placeholder="Qual a tarefa deseja cadastrar?">
+                <button id="save-task" type="submit" aria-label="Cadastrar tarefa" class="add-task-btn">+</button>
             </form>            
         </section>
         <section class="todo-list-section">
             <ul id="todo-list"></ul>
         </section>
+        <footer>
+            <span id="progress-display" class="progress-display">0/0 tarefas concluídas</span>
+            <button id="remove-done-tasks" class="remove-done-tasks-btn">
+                Remover tarefas concluídas
+            </button>
+        </footer>
     </main>
 </body>
 </html>
